# biomedical-ai-infra-lab

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  learning.md  pyproject.toml
builds/001-governed-biomedical-graphrag/: README.md
builds/001-governed-biomedical-graphrag/app/: main.py
builds/001-governed-biomedical-graphrag/app/api/: health_api.py  query_api.py
builds/001-governed-biomedical-graphrag/app/config/: settings.py
builds/001-governed-biomedical-graphrag/app/contracts/: __init__.py  audit_contracts.py  biomedical_entities.py  evidence_bundle.py  evidence_sources.py  governance.py  ontology_base.py  ontology_relationships.py  query_contracts.py  response_contracts.py  system_actions.py
builds/001-governed-biomedical-graphrag/app/dashboard/: streamlit_app.py
builds/001-governed-biomedical-graphrag/docs/: implementation_plan.md  ontology_design.md  scope.md  technical_specification.md
builds/001-governed-biomedical-graphrag/tests/: test_health_api.py  test_project_structure.py  test_query_api.py  test_settings.py  test_shared_import.py
docs/: data_sources.md  glossary.md  safety_boundaries.md  system_design.md  system_design.md-1
tests/: test_audit_contracts.py  test_biomedical_entity_contracts.py  test_evidence_bundle_contracts.py  test_evidence_source_contracts.py  test_governance_contracts.py  test_ontology_base_contracts.py  test_ontology_relationship_contracts.py  test_query_response_contracts.py  test_system_action_contracts.py
