[project]
name = "biomedical-ai-infra-lab"
version = "0.1.0"
description = "Biomedical AI infrastructure lab for governed RAG, GraphRAG, evidence contracts, model benchmarking, and regulated AI workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Nancy Bethala-Frounjian" }
]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "streamlit>=1.36.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.0",
  "pandas>=2.2.0",
  "duckdb>=1.0.0",
  "chromadb>=0.5.0",
  "neo4j>=5.22.0",
  "tenacity>=8.5.0",
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "types-requests>=2.32.0"
]

[tool.setuptools]
package-dir = {"" = "shared"}

[tool.setuptools.packages.find]
where = ["shared"]

[tool.pytest.ini_options]
testpaths = [
  "builds/001-governed-biomedical-graphrag/tests"
]
pythonpath = [
  "shared",
  "builds/001-governed-biomedical-graphrag"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
